--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <title>HTML Tutorial</title>
 <body>
-
-
-<p>This is a paragraph.</p>
-
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
 </body>
 </html>
