added another paragraph

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <title>HTML Tutorial</title>
 <body>
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
+    <p>This is another paragraph</p>
 </body>
 </html>
